yaml/monitoring/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    kubernetes.io/cluster-service: "true"
  name: grafana
  namespace: kube-system
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
