yaml/monitoring/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.window.sdspaas.io
    http:
      paths:
      - path:
        backend:
          serviceName: grafana
          servicePort: 3000
